--- a/style.css
+++ b/style.css
@@ -27,13 +27,13 @@
         hsl(240, 1%, 25%) 3%,
         hsl(0, 0%, 19%) 97%);
     --bg-gradient-jet: linear-gradient(to bottom right,
-        hsla(240, 1%, 18%, 0.251) 0%,
+        hsla(184, 100%, 47%, 0.251) 0%,
         hsla(240, 2%, 11%, 0) 100%), hsl(240, 2%, 13%);
     --bg-gradient-yellow-1: linear-gradient(to bottom right,
         hsl(45, 100%, 71%) 0%,
-        hsla(36, 100%, 69%, 0) 50%);
+        hsla(128, 91%, 47%, 0.911) 50%);
     --bg-gradient-yellow-2: linear-gradient(135deg,
-        hsla(45, 100%, 71%, 0.251) 0%,
+        hsla(60, 6%, 10%, 0.192) 0%,
         hsla(35, 100%, 68%, 0) 59.86%), hsl(240, 2%, 13%);
     --border-gradient-onyx: linear-gradient(to bottom right,
         hsl(0, 0%, 25%) 0%,
@@ -42,13 +42,13 @@
         hsl(45, 100%, 72%),
         hsl(35, 100%, 68%));
   
-    /* solid */
+    /* solid */ 
   
-    --jet: hsl(0, 0%, 22%);
+    --jet: hsl(180, 2%, 27%);
     --onyx: hsl(240, 1%, 17%);
-    --eerie-black-1: hsl(240, 2%, 13%);
-    --eerie-black-2: hsl(240, 2%, 12%);
-    --smoky-black: hsl(0, 0%, 7%);
+    --eerie-black-1: hsl(160, 3%, 18%);
+    --eerie-black-2: hsla(177, 66%, 41%, 0.144);
+    --smoky-black: hsl(0, 0%, 1%);
     --white-1: hsl(0, 0%, 100%);
     --white-2: hsl(0, 0%, 98%);
     --orange-yellow-crayola: hsl(45, 100%, 72%);
@@ -1000,10 +1000,11 @@
   
   .filter-select.active .select-icon {
     transform: rotate(0.5turn);
+    
   }
   
   .select-list {
-    background: var(--eerie-black-2);
+    background: rgb(52, 109, 101);
     position: absolute;
     top: calc(100% + 6px);
     width: 100%;
